[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/level_complete/LevelCompleteUI.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="LevelCompleteUI" type="Control"]
anchor_left = 0.325833
anchor_top = 0.25
anchor_right = 0.675
anchor_bottom = 0.575
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 406.5, 127 )
color = Color( 0.337255, 0.682353, 0.290196, 1 )

[node name="Padding" type="MarginContainer" parent="."]
anchor_left = 0.100239
anchor_top = 0.115385
anchor_right = 0.902148
anchor_bottom = 0.880342
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Padding"]
margin_right = 336.0
margin_bottom = 183.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title" type="Panel" parent="Padding/VBoxContainer"]
margin_left = 93.0
margin_right = 243.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Padding/VBoxContainer/title"]
anchor_right = 1.06081
anchor_bottom = 0.591837
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave] Level Complete! [/wave]"
text = " Level Complete! "
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="scorePanel" type="Panel" parent="Padding/VBoxContainer"]
margin_left = 93.0
margin_top = 54.0
margin_right = 243.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="score" type="Label" parent="Padding/VBoxContainer/scorePanel"]
anchor_right = 1.06081
anchor_bottom = 0.591837
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Score: 0 "
align = 1
valign = 1

[node name="H_ButtonContainer" type="HBoxContainer" parent="Padding/VBoxContainer"]
margin_left = 18.0
margin_top = 108.0
margin_right = 318.0
margin_bottom = 183.0
rect_min_size = Vector2( 300, 75 )
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="main_menu" type="Button" parent="Padding/VBoxContainer/H_ButtonContainer"]
margin_left = 11.0
margin_top = 12.0
margin_right = 136.0
margin_bottom = 62.0
rect_min_size = Vector2( 125, 50 )
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Main Menu"

[node name="next_level" type="Button" parent="Padding/VBoxContainer/H_ButtonContainer"]
margin_left = 175.0
margin_top = 12.0
margin_right = 300.0
margin_bottom = 62.0
rect_min_size = Vector2( 125, 50 )
size_flags_horizontal = 14
size_flags_vertical = 6
text = "Next Level"

[connection signal="pressed" from="Padding/VBoxContainer/H_ButtonContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Padding/VBoxContainer/H_ButtonContainer/next_level" to="." method="_on_next_level_pressed"]
